--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -210,7 +210,8 @@
       </button>
 
       <nav class="nav" id="nav" aria-label="Primary">
-        <a href="#comparison" class="is-active" aria-current="page">Top 7</a>
+        <!-- updated: removed aria-current="page" (anchors are not “page”) -->
+        <a href="#comparison" class="is-active">Top 7</a>
         <a href="#reviews">Reviews</a>
         <a href="#not-included">Not Included</a>
         <a href="#real-costs">Real Costs</a>
