--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -284,100 +284,90 @@
       <div class="wrap">
         <div class="section-head">
           <div>
-            <h2>Quick comparison: Top 7 expandable prefab homes on Amazon Canada</h2>
-            <p>
-              The numbers below are realistic ranges, not promises. Amazon listings change and often omit key build details.
-              Treat the “estimated installed cost” as a planning range that includes typical Canadian site work and utilities.
-            </p>
-          </div>
-        </div>
+            <table class="table" aria-label="Comparison table of 7 prefab homes">
+  <thead>
+    <tr>
+      <th>Rank</th>
+      <th>Expandable type</th>
+      <th>Bedrooms (as listed)</th>
+      <th>Structure material (as listed)</th>
+      <th>Amazon listed price (CAD)</th>
+      <th>Estimated installed cost (CAD)</th>
+      <th>Best for</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="#home-1"><strong>#1 Best Overall</strong></a></td>
+      <td>Foldable / expandable container-style (with bathroom)</td>
+      <td>Not specified</td>
+      <td>Aluminum</td>
+      <td>$19,552.96</td>
+      <td>$55,000–$140,000+</td>
+      <td>Shortlist-first buyers who want a practical layout</td>
+    </tr>
 
-        <div class="noteBox noteBox--tight">
-          <p class="small noteBoxText">
-            <strong>How we estimate costs:</strong> We assume you need delivery/offload, a legal foundation or engineered base (where required),
-            basic electrical + plumbing plan, and at least some winterization work in most regions. If your municipality treats the unit as an accessory structure
-            or you’re using it seasonally, your path may be cheaper. If it’s a full-time dwelling, the opposite is common.
-          </p>
-        </div>
+    <tr>
+      <td><a href="#home-2"><strong>#2 Premium Eco Modular</strong></a></td>
+      <td>Deployable / modular concept (configurable sizes)</td>
+      <td>Not specified</td>
+      <td>Alloy steel + EPS panels</td>
+      <td>$8,668.25</td>
+      <td>$60,000–$160,000+</td>
+      <td>Buyers prioritizing customization and finishes (verify specs)</td>
+    </tr>
 
-        <table class="table" aria-label="Comparison table of 7 prefab homes">
-          <thead>
-            <tr>
-              <th>Rank</th>
-              <th>Expandable type</th>
-              <th>Bedrooms</th>
-              <th>Structure material</th>
-              <th>Estimated unit cost range (CAD)</th>
-              <th>Estimated installed cost (CAD)</th>
-              <th>Best for</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="#home-1"><strong>#1 Best Overall</strong></a></td>
-              <td>Expandable container-style</td>
-              <td>1–2 (varies)</td>
-              <td>Steel frame + insulated panels (often)</td>
-              <td>$18,000–$45,000+</td>
-              <td>$55,000–$140,000+</td>
-              <td>Shortlist-first buyers who want a practical layout</td>
-            </tr>
-            <tr>
-              <td><a href="#home-2"><strong>#2 Premium Eco Modular</strong></a></td>
-              <td>Modular / configurable</td>
-              <td>1–2+</td>
-              <td>Steel/wood hybrid (varies)</td>
-              <td>$28,000–$70,000+</td>
-              <td>$80,000–$190,000+</td>
-              <td>Buyers prioritizing customization and finishes</td>
-            </tr>
-            <tr>
-              <td><a href="#home-3"><strong>#3 Luxury Modular</strong></a></td>
-              <td>Modular “luxury” build</td>
-              <td>2–3 (often)</td>
-              <td>Steel frame + upgraded interior</td>
-              <td>$45,000–$120,000+</td>
-              <td>$120,000–$280,000+</td>
-              <td>Higher budgets, guesthouse / cottage-style living</td>
-            </tr>
-            <tr>
-              <td><a href="#home-4"><strong>#4 Best Value</strong></a></td>
-              <td>Foldable / expandable micro-home</td>
-              <td>0–1</td>
-              <td>Steel frame + panels</td>
-              <td>$12,000–$35,000+</td>
-              <td>$45,000–$120,000+</td>
-              <td>Seasonal use, office, studio, starter cabin</td>
-            </tr>
-            <tr>
-              <td><a href="#home-5"><strong>#5 Expandable Alternative</strong></a></td>
-              <td>Expandable container modular</td>
-              <td>1–2</td>
-              <td>Steel frame</td>
-              <td>$18,000–$55,000+</td>
-              <td>$60,000–$160,000+</td>
-              <td>Flexible layouts with a practical footprint</td>
-            </tr>
-            <tr>
-              <td><a href="#home-6"><strong>#6 Secondary Modular</strong></a></td>
-              <td>Expandable cabin module</td>
-              <td>1–2</td>
-              <td>Steel frame + cabin-style envelope</td>
-              <td>$20,000–$60,000+</td>
-              <td>$65,000–$175,000+</td>
-              <td>Backyard suite, rental, or rural property add-on</td>
-            </tr>
-            <tr>
-              <td><a href="#home-7"><strong>#7 Compact Expandable</strong></a></td>
-              <td>Compact expandable</td>
-              <td>0–1</td>
-              <td>Steel frame + panels</td>
-              <td>$10,000–$30,000+</td>
-              <td>$40,000–$110,000+</td>
-              <td>Small footprint, simpler installs, tight lots (where allowed)</td>
-            </tr>
-          </tbody>
-        </table>
+    <tr>
+      <td><a href="#home-3"><strong>#3 Luxury Modular</strong></a></td>
+      <td>Foldable “luxury” modular listing (multi-size)</td>
+      <td>2–4 (as listed)</td>
+      <td>Metal</td>
+      <td>$21,749.60</td>
+      <td>$120,000–$280,000+</td>
+      <td>Higher budgets, guesthouse / cottage-style living</td>
+    </tr>
+
+    <tr>
+      <td><a href="#home-4"><strong>#4 Best Value</strong></a></td>
+      <td>Foldable modular container home (40 ft style listing)</td>
+      <td>1–3 (as listed)</td>
+      <td>Not specified</td>
+      <td>$22,600.00</td>
+      <td>$70,000–$190,000+</td>
+      <td>Family layout claims (verify what’s truly included)</td>
+    </tr>
+
+    <tr>
+      <td><a href="#home-5"><strong>#5 Expandable Alternative</strong></a></td>
+      <td>Expandable modular container home</td>
+      <td>2 (as listed)</td>
+      <td>Metal</td>
+      <td>$16,890.00</td>
+      <td>$60,000–$160,000+</td>
+      <td>Flexible layouts with a practical footprint</td>
+    </tr>
+
+    <tr>
+      <td><a href="#home-6"><strong>#6 Secondary Modular</strong></a></td>
+      <td>A-frame prefab cabin kit (triangle structure)</td>
+      <td>Not specified</td>
+      <td>Steel (triangle frame as listed)</td>
+      <td>$32,999.00</td>
+      <td>$80,000–$220,000+</td>
+      <td>Backyard suite / cabin vibe projects (permits + envelope matter)</td>
+    </tr>
+
+    <tr>
+      <td><a href="#home-7"><strong>#7 Compact Expandable</strong></a></td>
+      <td>2-storey modular prefab listing</td>
+      <td>4–5 (as listed)</td>
+      <td>Metal</td>
+      <td>$36,796.22</td>
+      <td>$120,000–$300,000+</td>
+      <td>Bigger layouts (verify structure, roof, snow load, utilities)</td>
+    </tr>
+  </tbody>
+</table>
 
         <p class="small comparisonTip">
           Tip: If a listing does not clearly state insulation values, window/door specs, electrical approvals, or snow-load assumptions,
