--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -210,7 +210,6 @@
       </button>
 
       <nav class="nav" id="nav" aria-label="Primary">
-        <!-- updated: removed aria-current="page" (anchors are not “page”) -->
         <a href="#comparison" class="is-active">Top 7</a>
         <a href="#reviews">Reviews</a>
         <a href="#not-included">Not Included</a>
@@ -284,90 +283,98 @@
       <div class="wrap">
         <div class="section-head">
           <div>
-            <table class="table" aria-label="Comparison table of 7 prefab homes">
-  <thead>
-    <tr>
-      <th>Rank</th>
-      <th>Expandable type</th>
-      <th>Bedrooms (as listed)</th>
-      <th>Structure material (as listed)</th>
-      <th>Amazon listed price (CAD)</th>
-      <th>Estimated installed cost (CAD)</th>
-      <th>Best for</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><a href="#home-1"><strong>#1 Best Overall</strong></a></td>
-      <td>Foldable / expandable container-style (with bathroom)</td>
-      <td>Not specified</td>
-      <td>Aluminum</td>
-      <td>$19,552.96</td>
-      <td>$55,000–$140,000+</td>
-      <td>Shortlist-first buyers who want a practical layout</td>
-    </tr>
+            <h2>Quick comparison: Top 7 expandable prefab homes on Amazon Canada</h2>
+            <p>
+              The table below uses the product details you provided (materials/weights/dimensions) and the observed Amazon prices from your screenshots.
+              Installed cost is not listed as a number here (it depends on site work and approvals) and is covered in the “Real Costs” section.
+            </p>
+          </div>
+        </div>
 
-    <tr>
-      <td><a href="#home-2"><strong>#2 Premium Eco Modular</strong></a></td>
-      <td>Deployable / modular concept (configurable sizes)</td>
-      <td>Not specified</td>
-      <td>Alloy steel + EPS panels</td>
-      <td>$8,668.25</td>
-      <td>$60,000–$160,000+</td>
-      <td>Buyers prioritizing customization and finishes (verify specs)</td>
-    </tr>
+        <div class="noteBox noteBox--tight">
+          <p class="small noteBoxText">
+            <strong>Note:</strong> Amazon listings change and often omit key build details. If a spec isn’t stated by the listing, it’s marked as “Not specified”.
+          </p>
+        </div>
 
-    <tr>
-      <td><a href="#home-3"><strong>#3 Luxury Modular</strong></a></td>
-      <td>Foldable “luxury” modular listing (multi-size)</td>
-      <td>2–4 (as listed)</td>
-      <td>Metal</td>
-      <td>$21,749.60</td>
-      <td>$120,000–$280,000+</td>
-      <td>Higher budgets, guesthouse / cottage-style living</td>
-    </tr>
-
-    <tr>
-      <td><a href="#home-4"><strong>#4 Best Value</strong></a></td>
-      <td>Foldable modular container home (40 ft style listing)</td>
-      <td>1–3 (as listed)</td>
-      <td>Not specified</td>
-      <td>$22,600.00</td>
-      <td>$70,000–$190,000+</td>
-      <td>Family layout claims (verify what’s truly included)</td>
-    </tr>
-
-    <tr>
-      <td><a href="#home-5"><strong>#5 Expandable Alternative</strong></a></td>
-      <td>Expandable modular container home</td>
-      <td>2 (as listed)</td>
-      <td>Metal</td>
-      <td>$16,890.00</td>
-      <td>$60,000–$160,000+</td>
-      <td>Flexible layouts with a practical footprint</td>
-    </tr>
-
-    <tr>
-      <td><a href="#home-6"><strong>#6 Secondary Modular</strong></a></td>
-      <td>A-frame prefab cabin kit (triangle structure)</td>
-      <td>Not specified</td>
-      <td>Steel (triangle frame as listed)</td>
-      <td>$32,999.00</td>
-      <td>$80,000–$220,000+</td>
-      <td>Backyard suite / cabin vibe projects (permits + envelope matter)</td>
-    </tr>
-
-    <tr>
-      <td><a href="#home-7"><strong>#7 Compact Expandable</strong></a></td>
-      <td>2-storey modular prefab listing</td>
-      <td>4–5 (as listed)</td>
-      <td>Metal</td>
-      <td>$36,796.22</td>
-      <td>$120,000–$300,000+</td>
-      <td>Bigger layouts (verify structure, roof, snow load, utilities)</td>
-    </tr>
-  </tbody>
-</table>
+        <table class="table" aria-label="Comparison table of 7 prefab homes">
+          <thead>
+            <tr>
+              <th>Rank</th>
+              <th>Expandable type</th>
+              <th>Bedrooms (listing)</th>
+              <th>Structure material (listing)</th>
+              <th>Observed Amazon price (CAD)</th>
+              <th>Installed cost (CAD)</th>
+              <th>Best for</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="#home-1"><strong>#1 Best Overall</strong></a></td>
+              <td>Expandable container-style</td>
+              <td>Not specified</td>
+              <td>Aluminum structure (base material: Plastic)</td>
+              <td>$19,552.96</td>
+              <td>Varies (see <a href="#real-costs">Real Costs</a>)</td>
+              <td>Shortlist-first buyers who want a practical layout</td>
+            </tr>
+            <tr>
+              <td><a href="#home-2"><strong>#2 Premium Eco Modular</strong></a></td>
+              <td>Modular / configurable</td>
+              <td>Not specified</td>
+              <td>EPS panels + alloy steel / metal structure</td>
+              <td>$8,668.25</td>
+              <td>Varies (see <a href="#real-costs">Real Costs</a>)</td>
+              <td>Buyers prioritizing customization and finishes</td>
+            </tr>
+            <tr>
+              <td><a href="#home-3"><strong>#3 Luxury Modular</strong></a></td>
+              <td>Modular “luxury” build</td>
+              <td>2–4 (as shown in listing title)</td>
+              <td>Metal</td>
+              <td>$21,749.60</td>
+              <td>Varies (see <a href="#real-costs">Real Costs</a>)</td>
+              <td>Higher budgets, guesthouse / cottage-style living</td>
+            </tr>
+            <tr>
+              <td><a href="#home-4"><strong>#4 Best Value</strong></a></td>
+              <td>Foldable / expandable</td>
+              <td>1–3 (as shown in listing title)</td>
+              <td>Alloy steel (listing shows base/structure: Alloy steel)</td>
+              <td>$22,600.00</td>
+              <td>Varies (see <a href="#real-costs">Real Costs</a>)</td>
+              <td>Seasonal use, office, studio, starter cabin</td>
+            </tr>
+            <tr>
+              <td><a href="#home-5"><strong>#5 Expandable Alternative</strong></a></td>
+              <td>Expandable container modular</td>
+              <td>2 (as shown in listing title)</td>
+              <td>Metal (structure: galvanized steel)</td>
+              <td>$16,890.00</td>
+              <td>Varies (see <a href="#real-costs">Real Costs</a>)</td>
+              <td>Flexible layouts with a practical footprint</td>
+            </tr>
+            <tr>
+              <td><a href="#home-6"><strong>#6 Secondary Modular</strong></a></td>
+              <td>Expandable cabin module</td>
+              <td>Not specified</td>
+              <td>Steel structure (listing text: galvanized steel + sandwich panel wall)</td>
+              <td>$32,999.00</td>
+              <td>Varies (see <a href="#real-costs">Real Costs</a>)</td>
+              <td>Backyard suite, rental, or rural property add-on</td>
+            </tr>
+            <tr>
+              <td><a href="#home-7"><strong>#7 Compact Expandable</strong></a></td>
+              <td>Compact modular</td>
+              <td>4–5 (as shown in listing title)</td>
+              <td>Metal (base/structure: Alloy steel)</td>
+              <td>$36,796.22</td>
+              <td>Varies (see <a href="#real-costs">Real Costs</a>)</td>
+              <td>Large family layout claims, but verify documentation</td>
+            </tr>
+          </tbody>
+        </table>
 
         <p class="small comparisonTip">
           Tip: If a listing does not clearly state insulation values, window/door specs, electrical approvals, or snow-load assumptions,
@@ -404,10 +411,13 @@
           </p>
 
           <ul class="specs">
-            <li><strong>Estimated unit price range:</strong> $18,000–$45,000+ CAD</li>
-            <li><strong>Estimated total installed cost in Canada:</strong> $55,000–$140,000+ CAD</li>
-            <li><strong>What’s included (typical):</strong> steel structure, wall/roof panels, basic interior surfaces, doors/windows, bathroom room (sometimes with fixtures)</li>
-            <li><strong>What’s NOT included (common):</strong> engineered foundation, permits, utility hookups, winter-rated insulation, HVAC/heat plan, appliances</li>
+            <li><strong>Observed Amazon price (CAD):</strong> $19,552.96</li>
+            <li><strong>ASIN:</strong> B0CV5NRJT2</li>
+            <li><strong>Listing dimensions:</strong> 14.99P × 16.05La × 6.3H meters</li>
+            <li><strong>Listing weight:</strong> 2000 lb (also shown as 907.18 kg in product details)</li>
+            <li><strong>Listing materials:</strong> Aluminum (type/material/structure), base material: Plastic</li>
+            <li><strong>Assembly required (listing):</strong> Yes</li>
+            <li><strong>Installed cost in Canada:</strong> Varies (see <a href="#real-costs">Real Costs</a>)</li>
             <li><strong>Best for:</strong> a practical starter unit for a cabin, guest suite, or phased build</li>
           </ul>
 
@@ -458,10 +468,12 @@
           </p>
 
           <ul class="specs">
-            <li><strong>Estimated unit price range:</strong> $28,000–$70,000+ CAD</li>
-            <li><strong>Estimated total installed cost in Canada:</strong> $80,000–$190,000+ CAD</li>
-            <li><strong>What’s included (typical):</strong> modular structure, configurable layout options, interior finish packages (varies)</li>
-            <li><strong>What’s NOT included (common):</strong> stamped drawings for your municipality, site services, foundation engineering, snow-load verification, HVAC plan</li>
+            <li><strong>Observed Amazon price (CAD):</strong> $8,668.25</li>
+            <li><strong>ASIN:</strong> B0FB489169</li>
+            <li><strong>Listing weight:</strong> 7720 lb</li>
+            <li><strong>Listing materials:</strong> EPS panels in steel alloy; base: alloy steel; structure: metal</li>
+            <li><strong>Assembly required (listing):</strong> Yes</li>
+            <li><strong>Installed cost in Canada:</strong> Varies (see <a href="#real-costs">Real Costs</a>)</li>
             <li><strong>Best for:</strong> buyers who want a more finished result and are willing to manage approvals</li>
           </ul>
 
@@ -512,10 +524,14 @@
           </p>
 
           <ul class="specs">
-            <li><strong>Estimated unit price range:</strong> $45,000–$120,000+ CAD</li>
-            <li><strong>Estimated total installed cost in Canada:</strong> $120,000–$280,000+ CAD</li>
-            <li><strong>What’s included (typical):</strong> upgraded finishes (varies), more complete room plan, pre-finished surfaces</li>
-            <li><strong>What’s NOT included (common):</strong> Canadian permit package, foundation, utility connections, winter mechanicals, grading/drainage</li>
+            <li><strong>Observed Amazon price (CAD):</strong> $21,749.60</li>
+            <li><strong>ASIN:</strong> B0G6KNWL5C</li>
+            <li><strong>Listing bedrooms (title):</strong> 2–4</li>
+            <li><strong>Listing dimensions:</strong> 5.89P × 6.3La × 2.46H meters</li>
+            <li><strong>Listing weight:</strong> 6895 lb</li>
+            <li><strong>Listing materials:</strong> Metal</li>
+            <li><strong>Assembly required (listing):</strong> Yes</li>
+            <li><strong>Installed cost in Canada:</strong> Varies (see <a href="#real-costs">Real Costs</a>)</li>
             <li><strong>Best for:</strong> higher budgets, guesthouse / cottage-style living</li>
           </ul>
 
@@ -566,10 +582,14 @@
           </p>
 
           <ul class="specs">
-            <li><strong>Estimated unit price range:</strong> $12,000–$35,000+ CAD</li>
-            <li><strong>Estimated total installed cost in Canada:</strong> $45,000–$120,000+ CAD</li>
-            <li><strong>What’s included (typical):</strong> structure, panels, doors/windows, simple interior finishing</li>
-            <li><strong>What’s NOT included (common):</strong> kitchen/appliances, winter package, heat source, plumbing hookups, permit-ready docs</li>
+            <li><strong>Observed Amazon price (CAD):</strong> $22,600.00</li>
+            <li><strong>ASIN:</strong> B0FWQHNLSK</li>
+            <li><strong>Listing bedrooms (title):</strong> 1–3</li>
+            <li><strong>Listing dimensions:</strong> 6.3P × 2.48La × 5.9H meters</li>
+            <li><strong>Listing weight:</strong> 3000 lb</li>
+            <li><strong>Listing materials:</strong> Base/structure: alloy steel (type material shown as “1 x”)</li>
+            <li><strong>Assembly required (listing):</strong> Yes</li>
+            <li><strong>Installed cost in Canada:</strong> Varies (see <a href="#real-costs">Real Costs</a>)</li>
             <li><strong>Best for:</strong> seasonal use, office, studio, starter cabin, phase-1 shelter</li>
           </ul>
 
@@ -601,10 +621,14 @@
           </p>
 
           <ul class="specs">
-            <li><strong>Estimated unit price range:</strong> $18,000–$55,000+ CAD</li>
-            <li><strong>Estimated total installed cost in Canada:</strong> $60,000–$160,000+ CAD</li>
-            <li><strong>What’s included (typical):</strong> expandable structure, basic interior, doors/windows</li>
-            <li><strong>What’s NOT included (common):</strong> engineered foundation, permits, winter mechanicals, site services, insulation upgrades</li>
+            <li><strong>Observed Amazon price (CAD):</strong> $16,890.00</li>
+            <li><strong>ASIN:</strong> B0FXQ16PDX</li>
+            <li><strong>Listing bedrooms (title):</strong> 2</li>
+            <li><strong>Listing dimensions:</strong> 5.9P × 6.3La × 2.48H meters</li>
+            <li><strong>Listing weight:</strong> 5500 lb</li>
+            <li><strong>Listing materials:</strong> Metal; base: alloy steel; structure: galvanized steel</li>
+            <li><strong>Assembly required (listing):</strong> Yes</li>
+            <li><strong>Installed cost in Canada:</strong> Varies (see <a href="#real-costs">Real Costs</a>)</li>
             <li><strong>Best for:</strong> phased builds that treat the unit as a shell + plan</li>
           </ul>
 
@@ -630,10 +654,13 @@
           </p>
 
           <ul class="specs">
-            <li><strong>Estimated unit price range:</strong> $20,000–$60,000+ CAD</li>
-            <li><strong>Estimated total installed cost in Canada:</strong> $65,000–$175,000+ CAD</li>
-            <li><strong>What’s included (typical):</strong> cabin-style structure, panels, basic interior finish options</li>
-            <li><strong>What’s NOT included (common):</strong> site services, winter mechanicals, foundation engineering, municipal approvals</li>
+            <li><strong>Observed Amazon price (CAD):</strong> $32,999.00</li>
+            <li><strong>ASIN:</strong> B0GLYKZ4J1</li>
+            <li><strong>Listing dimensions:</strong> 589 × 220 × 251 cm (also shown as 5900 × 6300 × 2480 mm / customizable in description)</li>
+            <li><strong>Listing weight:</strong> 2993.69 kg</li>
+            <li><strong>Listing country of origin:</strong> China</li>
+            <li><strong>Listing structure/material:</strong> Steel structure; wall described as sandwich panel; roof insulation described as glass wool</li>
+            <li><strong>Installed cost in Canada:</strong> Varies (see <a href="#real-costs">Real Costs</a>)</li>
             <li><strong>Best for:</strong> secondary unit use cases where you can phase improvements</li>
           </ul>
 
@@ -659,10 +686,14 @@
           </p>
 
           <ul class="specs">
-            <li><strong>Estimated unit price range:</strong> $10,000–$30,000+ CAD</li>
-            <li><strong>Estimated total installed cost in Canada:</strong> $40,000–$110,000+ CAD</li>
-            <li><strong>What’s included (typical):</strong> compact structure, basic interior, doors/windows</li>
-            <li><strong>What’s NOT included (common):</strong> permit docs, foundation, utilities, winter mechanical plan, upgraded insulation/windows</li>
+            <li><strong>Observed Amazon price (CAD):</strong> $36,796.22</li>
+            <li><strong>ASIN:</strong> B0G6KVKB9H</li>
+            <li><strong>Listing bedrooms (title):</strong> 4–5</li>
+            <li><strong>Listing dimensions:</strong> 5.89P × 6.3La × 2.46H meters</li>
+            <li><strong>Listing weight:</strong> 6895 lb</li>
+            <li><strong>Listing materials:</strong> Metal; base/structure: alloy steel</li>
+            <li><strong>Assembly required (listing):</strong> Yes</li>
+            <li><strong>Installed cost in Canada:</strong> Varies (see <a href="#real-costs">Real Costs</a>)</li>
             <li><strong>Best for:</strong> small-footprint projects where simplicity matters</li>
           </ul>
 
