--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -313,6 +313,7 @@
             <thead>
               <tr>
                 <th scope="col">Rank</th>
+                <th scope="col">Photo</th>
                 <th scope="col">Expandable type</th>
                 <th scope="col">Bedrooms (listing)</th>
                 <th scope="col">Structure material (listing)</th>
@@ -324,6 +325,16 @@
             <tbody>
               <tr>
                 <td><a href="#home-1"><strong>#1 Best Overall</strong></a></td>
+                <td>
+                  <a href="#home-1" aria-label="Jump to #1 image">
+                    <img
+                      src="/assets/images/products/prefab-home-amazon-best-overall-1600x1600.webp"
+                      width="88" height="88"
+                      alt="Best overall expandable prefab home photo"
+                      loading="lazy" decoding="async"
+                      style="border-radius:14px;object-fit:cover;">
+                  </a>
+                </td>
                 <td>Expandable container-style</td>
                 <td>Not specified</td>
                 <td>Aluminum structure (base material: Plastic)</td>
@@ -333,6 +344,16 @@
               </tr>
               <tr>
                 <td><a href="#home-2"><strong>#2 Premium Eco Modular</strong></a></td>
+                <td>
+                  <a href="#home-2" aria-label="Jump to #2 image">
+                    <img
+                      src="/assets/images/products/prefab-home-amazon-premium-eco-modular-1600x1600.webp"
+                      width="88" height="88"
+                      alt="Premium eco modular prefab home photo"
+                      loading="lazy" decoding="async"
+                      style="border-radius:14px;object-fit:cover;">
+                  </a>
+                </td>
                 <td>Modular / configurable</td>
                 <td>Not specified</td>
                 <td>EPS panels + alloy steel / metal structure</td>
@@ -342,6 +363,16 @@
               </tr>
               <tr>
                 <td><a href="#home-3"><strong>#3 Luxury Modular</strong></a></td>
+                <td>
+                  <a href="#home-3" aria-label="Jump to #3 image">
+                    <img
+                      src="/assets/images/products/prefab-home-amazon-luxury-modular-1600x1600.webp"
+                      width="88" height="88"
+                      alt="Luxury modular prefab home photo"
+                      loading="lazy" decoding="async"
+                      style="border-radius:14px;object-fit:cover;">
+                  </a>
+                </td>
                 <td>Modular “luxury” build</td>
                 <td>2–4 (as shown in listing title)</td>
                 <td>Metal</td>
@@ -351,6 +382,16 @@
               </tr>
               <tr>
                 <td><a href="#home-4"><strong>#4 Best Value</strong></a></td>
+                <td>
+                  <a href="#home-4" aria-label="Jump to #4 image">
+                    <img
+                      src="/assets/images/products/prefab-home-amazon-best-value-foldable-1600x1600.webp"
+                      width="88" height="88"
+                      alt="Best value foldable prefab home photo"
+                      loading="lazy" decoding="async"
+                      style="border-radius:14px;object-fit:cover;">
+                  </a>
+                </td>
                 <td>Foldable / expandable</td>
                 <td>1–3 (as shown in listing title)</td>
                 <td>Alloy steel (listing shows base/structure: Alloy steel)</td>
@@ -360,6 +401,16 @@
               </tr>
               <tr>
                 <td><a href="#home-5"><strong>#5 Expandable Alternative</strong></a></td>
+                <td>
+                  <a href="#home-5" aria-label="Jump to #5 image">
+                    <img
+                      src="/assets/images/products/prefab-home-amazon-expandable-alternative-1600x1600.webp"
+                      width="88" height="88"
+                      alt="Expandable alternative prefab home photo"
+                      loading="lazy" decoding="async"
+                      style="border-radius:14px;object-fit:cover;">
+                  </a>
+                </td>
                 <td>Expandable container modular</td>
                 <td>2 (as shown in listing title)</td>
                 <td>Metal (structure: galvanized steel)</td>
@@ -369,6 +420,16 @@
               </tr>
               <tr>
                 <td><a href="#home-6"><strong>#6 Secondary Modular</strong></a></td>
+                <td>
+                  <a href="#home-6" aria-label="Jump to #6 image">
+                    <img
+                      src="/assets/images/products/prefab-home-amazon-secondary-modular-cabin-1600x1600.webp"
+                      width="88" height="88"
+                      alt="Secondary modular cabin prefab home photo"
+                      loading="lazy" decoding="async"
+                      style="border-radius:14px;object-fit:cover;">
+                  </a>
+                </td>
                 <td>Expandable cabin module</td>
                 <td>Not specified</td>
                 <td>Steel structure (listing text: galvanized steel + sandwich panel wall)</td>
@@ -378,6 +439,16 @@
               </tr>
               <tr>
                 <td><a href="#home-7"><strong>#7 Compact Expandable</strong></a></td>
+                <td>
+                  <a href="#home-7" aria-label="Jump to #7 image">
+                    <img
+                      src="/assets/images/products/prefab-home-amazon-compact-expandable-1600x1600.webp"
+                      width="88" height="88"
+                      alt="Compact expandable prefab home photo"
+                      loading="lazy" decoding="async"
+                      style="border-radius:14px;object-fit:cover;">
+                  </a>
+                </td>
                 <td>Compact modular</td>
                 <td>4–5 (as shown in listing title)</td>
                 <td>Metal (base/structure: Alloy steel)</td>
@@ -416,6 +487,15 @@
             <a href="https://www.amazon.ca/Portable-Foldable-Expandable-Container-Bathroom/dp/B0CV5NRJT2?&linkCode=ll2&tag=kitchengearla-20&linkId=c8746781767d2e8a6561761f134447dc&ref_=as_li_ss_tl"
                rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
           </p>
+
+          <figure class="product-media" style="margin:12px 0 10px;">
+            <img
+              src="/assets/images/products/prefab-home-amazon-best-overall-1600x1600.webp"
+              width="800" height="800"
+              alt="Portable foldable expandable container house exterior photo"
+              loading="lazy" decoding="async"
+              style="width:100%;max-width:520px;height:auto;border-radius:18px;object-fit:cover;">
+          </figure>
 
           <p>
             This style of expandable container house is usually the most straightforward starting point for buyers who want a “real room” feel without custom design work.
@@ -479,6 +559,15 @@
                rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
           </p>
 
+          <figure class="product-media" style="margin:12px 0 10px;">
+            <img
+              src="/assets/images/products/prefab-home-amazon-premium-eco-modular-1600x1600.webp"
+              width="800" height="800"
+              alt="Premium eco modular prefab home exterior photo"
+              loading="lazy" decoding="async"
+              style="width:100%;max-width:520px;height:auto;border-radius:18px;object-fit:cover;">
+          </figure>
+
           <p>
             “Eco modular” listings often promise better materials or efficiency. The real value comes from clarity: do you get upgraded windows, better insulation,
             and a sensible mechanical plan? If the seller provides real documentation (not just renders), these can be a strong choice for buyers who want customization.
@@ -538,6 +627,15 @@
             <a href="https://www.amazon.ca/-/fr/Maison-modulaire-luxe-pr%C3%A9fabriqu%C3%A9es-enti%C3%A8rement/dp/B0G6KNWL5C?linkCode=ll2&tag=kitchengearla-20&linkId=cc2bb6e3e2b25807252ac077bbeb4f71&ref_=as_li_ss_tl"
                rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
           </p>
+
+          <figure class="product-media" style="margin:12px 0 10px;">
+            <img
+              src="/assets/images/products/prefab-home-amazon-luxury-modular-1600x1600.webp"
+              width="800" height="800"
+              alt="Luxury modular prefab home exterior photo"
+              loading="lazy" decoding="async"
+              style="width:100%;max-width:520px;height:auto;border-radius:18px;object-fit:cover;">
+          </figure>
 
           <p>
             In Canada, “luxury” is less about glossy photos and more about building envelope performance: insulation, air sealing, window/door quality, and a heating plan
@@ -601,6 +699,15 @@
                rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
           </p>
 
+          <figure class="product-media" style="margin:12px 0 10px;">
+            <img
+              src="/assets/images/products/prefab-home-amazon-best-value-foldable-1600x1600.webp"
+              width="800" height="800"
+              alt="Best value foldable prefab tiny home exterior photo"
+              loading="lazy" decoding="async"
+              style="width:100%;max-width:520px;height:auto;border-radius:18px;object-fit:cover;">
+          </figure>
+
           <p>
             Foldable/expandable micro-homes can work as seasonal cabins or site offices. The tradeoff is usually the envelope:
             insulation may be minimal and windows/doors can be entry-level. If you’re aiming for year-round living, budget for upgrades.
@@ -644,6 +751,15 @@
                rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
           </p>
 
+          <figure class="product-media" style="margin:12px 0 10px;">
+            <img
+              src="/assets/images/products/prefab-home-amazon-expandable-alternative-1600x1600.webp"
+              width="800" height="800"
+              alt="Expandable alternative container modular home exterior photo"
+              loading="lazy" decoding="async"
+              style="width:100%;max-width:520px;height:auto;border-radius:18px;object-fit:cover;">
+          </figure>
+
           <p>
             Similar family to the “best overall,” with a balanced footprint. For many buyers, the right pick is the one where the seller provides clearer specs,
             delivery coordination, and a layout that matches your intended use.
@@ -681,6 +797,15 @@
                rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
           </p>
 
+          <figure class="product-media" style="margin:12px 0 10px;">
+            <img
+              src="/assets/images/products/prefab-home-amazon-secondary-modular-cabin-1600x1600.webp"
+              width="800" height="800"
+              alt="Secondary modular cabin exterior photo"
+              loading="lazy" decoding="async"
+              style="width:100%;max-width:520px;height:auto;border-radius:18px;object-fit:cover;">
+          </figure>
+
           <p>
             Often positioned for secondary dwellings (backyard suite/rental/cabin). The deciding factor in Canada is envelope performance and whether the install can be
             made code-aligned. Treat roof and snow-load claims as unproven until you have documentation.
@@ -716,6 +841,15 @@
             <a href="https://www.amazon.ca/-/fr/modulaire-pr%C3%A9fabriqu%C3%A9e-chambres-coucher-portable/dp/B0G6KVKB9H?linkCode=ll2&tag=kitchengearla-20&linkId=1dc6c4432e2969f93b84fb00e9aa8c5a&ref_=as_li_ss_tl"
                rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
           </p>
+
+          <figure class="product-media" style="margin:12px 0 10px;">
+            <img
+              src="/assets/images/products/prefab-home-amazon-compact-expandable-1600x1600.webp"
+              width="800" height="800"
+              alt="Compact expandable prefab home exterior photo"
+              loading="lazy" decoding="async"
+              style="width:100%;max-width:520px;height:auto;border-radius:18px;object-fit:cover;">
+          </figure>
 
           <p>
             Compact expandables can make sense when access is limited or you want a simpler footprint. For year-round living, they can still work, but only if you invest
