--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -994,102 +994,135 @@
 
     <!-- ESSENTIAL ADD-ONS -->
     <section id="add-ons" class="section anchor">
-      <div class="wrap">
-        <h2>Essential add-ons for living in a prefab home (Canada-focused)</h2>
-        <p>
-          Most expandable prefab homes sold online are closer to a “structure + interior shell” than a turnkey Canadian home.
-          These add-ons are common items buyers need to make the space functional: internet, temporary power, and practical heating/cooling.
+  <div class="wrap">
+    <h2>Essential add-ons for living in a prefab home (Canada-focused)</h2>
+    <p>
+      Most expandable prefab homes sold online are closer to a “structure + interior shell” than a turnkey Canadian home.
+      These add-ons are common items buyers need to make the space functional: internet, temporary power, and practical heating/cooling.
+    </p>
+
+    <div class="grid">
+      <!-- UPDATED: Starlink link (direct product URL to avoid 404) -->
+      <div class="card grid-span-6">
+        <h3>Reliable internet (rural-friendly): Starlink (Portable + Standard Kit)</h3>
+        <p class="small">
+          <a href="https://www.amazon.ca/dp/B0DJHQCMWR?linkCode=ll2&tag=kitchengearla-20&linkId=5c7c1938e275e478f96c272f31da1b72&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
         </p>
-
-        <div class="grid">
-          <div class="card grid-span-6">
-            <h3>Reliable internet (rural-friendly): Starlink Standard</h3>
-            <p class="small">
-              <a href="https://www.amazon.ca/Starlink-Standard-Wi-Fi-Tri-Band-System/dp/B0D5SGXQCD?&linkCode=ll2&tag=kitchengearla-20&linkId=53319a6d17b9aca9f937444eb030b712&ref_=as_li_ss_tl"
-                 rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
-            </p>
-            <ul class="specs">
-              <li><strong>Best for:</strong> rural properties, temporary installs, work-from-home</li>
-              <li><strong>Watch-outs:</strong> mounting location, snow/ice exposure, ongoing service cost</li>
-            </ul>
-            <div class="cta-row">
-              <a class="btn btn-primary"
-                 href="https://www.amazon.ca/Starlink-Standard-Wi-Fi-Tri-Band-System/dp/B0D5SGXQCD?&linkCode=ll2&tag=kitchengearla-20&linkId=53319a6d17b9aca9f937444eb030b712&ref_=as_li_ss_tl"
-                 rel="nofollow sponsored noopener" target="_blank">Check Starlink price</a>
-            </div>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>Backup / temporary power: Jackery Explorer (high-capacity)</h3>
-            <p class="small">
-              <a href="https://www.amazon.ca/Jackery-Explorer-Temperature-Resistant-Condition-Emergencies/dp/B0DHGMDJW2?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=c0ebb4ef4e0b90ef2fc00709c14be86e&ref_=as_li_ss_tl"
-                 rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
-            </p>
-            <ul class="specs">
-              <li><strong>Best for:</strong> temporary power, backup, small loads</li>
-              <li><strong>Watch-outs:</strong> load planning (watts), cold-weather performance, safe indoor use rules</li>
-            </ul>
-            <div class="cta-row">
-              <a class="btn btn-primary"
-                 href="https://www.amazon.ca/Jackery-Explorer-Temperature-Resistant-Condition-Emergencies/dp/B0DHGMDJW2?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=c0ebb4ef4e0b90ef2fc00709c14be86e&ref_=as_li_ss_tl"
-                 rel="nofollow sponsored noopener" target="_blank">Check Jackery price</a>
-            </div>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>Heating + cooling: Senville 12,000 BTU mini-split</h3>
-            <p class="small">
-              <a href="https://www.amazon.ca/Senville-SENA-12HF-Conditioner-Ductless-Energy/dp/B00ESNCW38?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=bc2ab89feaeea868b6877a97ef0fb5f6&ref_=as_li_ss_tl"
-                 rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
-            </p>
-            <ul class="specs">
-              <li><strong>Best for:</strong> small-to-medium prefab spaces, efficient heating/cooling</li>
-              <li><strong>Watch-outs:</strong> sizing, cold-climate capability, professional install, electrical requirements</li>
-            </ul>
-            <div class="cta-row">
-              <a class="btn btn-primary"
-                 href="https://www.amazon.ca/Senville-SENA-12HF-Conditioner-Ductless-Energy/dp/B00ESNCW38?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=bc2ab89feaeea868b6877a97ef0fb5f6&ref_=as_li_ss_tl"
-                 rel="nofollow sponsored noopener" target="_blank">Check Senville price</a>
-            </div>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>Heating + cooling alternative: COSTWAY 12,000 BTU mini-split</h3>
-            <p class="small">
-              <a href="https://www.amazon.ca/COSTWAY-Conditioner-Inverter-208-230V-12000BTU/dp/B0CC2MVD7G?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=7dbe9e0490ed97e3f4cb4d41e5685e7b&ref_=as_li_ss_tl"
-                 rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
-            </p>
-            <ul class="specs">
-              <li><strong>Best for:</strong> budget-focused builds with a clear electrical plan</li>
-              <li><strong>Watch-outs:</strong> voltage (often 208–230V), install quality, cold weather expectations</li>
-            </ul>
-            <div class="cta-row">
-              <a class="btn btn-primary"
-                 href="https://www.amazon.ca/COSTWAY-Conditioner-Inverter-208-230V-12000BTU/dp/B0CC2MVD7G?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=7dbe9e0490ed97e3f4cb4d41e5685e7b&ref_=as_li_ss_tl"
-                 rel="nofollow sponsored noopener" target="_blank">Check COSTWAY price</a>
-            </div>
-          </div>
-
-          <div class="card grid-span-12">
-            <h3>Optional: high-capacity off-grid power (EcoFlow DELTA Pro)</h3>
-            <p class="small">
-              <a href="https://www.amazon.ca/EF-ECOFLOW-3600-4500W-Expandable-Generator/dp/B0BW8PT9TD?linkCode=ll2&tag=kitchengearla-20&linkId=79c9bd5ec9b0e13b8d87e7f8e21a993c&ref_=as_li_ss_tl"
-                 rel="nofollow sponsored noopener" target="_blank">View EcoFlow DELTA Pro on Amazon Canada</a>
-            </p>
-            <p class="small mb0">
-              Useful for temporary power while waiting for grid service. It can cover basic loads, but it’s not a complete winter heating plan for most Canadian climates.
-            </p>
-          </div>
-        </div>
-
-        <div class="noteBox noteBox--mt14">
-          <p class="small noteBoxText">
-            <strong>Realistic note:</strong> For Canadian winters, comfort is mostly about the envelope (insulation + air sealing) and correct HVAC sizing.
-            If insulation/windows are unknown, budget for upgrades or expect higher energy use.
-          </p>
+        <ul class="specs">
+          <li><strong>Best for:</strong> rural properties, temporary installs, work-from-home</li>
+          <li><strong>Watch-outs:</strong> mounting location, snow/ice exposure, ongoing service cost</li>
+        </ul>
+        <div class="cta-row">
+          <a class="btn btn-primary"
+             href="https://www.amazon.ca/dp/B0DJHQCMWR?linkCode=ll2&tag=kitchengearla-20&linkId=5c7c1938e275e478f96c272f31da1b72&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">Check Starlink price</a>
         </div>
       </div>
-    </section>
+
+      <div class="card grid-span-6">
+        <h3>Backup / temporary power: Jackery Explorer (high-capacity)</h3>
+        <p class="small">
+          <a href="https://www.amazon.ca/Jackery-Explorer-Temperature-Resistant-Condition-Emergencies/dp/B0DHGMDJW2?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=c0ebb4ef4e0b90ef2fc00709c14be86e&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
+        </p>
+        <ul class="specs">
+          <li><strong>Best for:</strong> temporary power, backup, small loads</li>
+          <li><strong>Watch-outs:</strong> load planning (watts), cold-weather performance, safe indoor use rules</li>
+        </ul>
+        <div class="cta-row">
+          <a class="btn btn-primary"
+             href="https://www.amazon.ca/Jackery-Explorer-Temperature-Resistant-Condition-Emergencies/dp/B0DHGMDJW2?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=c0ebb4ef4e0b90ef2fc00709c14be86e&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">Check Jackery price</a>
+        </div>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3>Heating + cooling: Senville 12,000 BTU mini-split</h3>
+        <p class="small">
+          <a href="https://www.amazon.ca/Senville-SENA-12HF-Conditioner-Ductless-Energy/dp/B00ESNCW38?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=bc2ab89feaeea868b6877a97ef0fb5f6&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
+        </p>
+        <ul class="specs">
+          <li><strong>Best for:</strong> small-to-medium prefab spaces, efficient heating/cooling</li>
+          <li><strong>Watch-outs:</strong> sizing, cold-climate capability, professional install, electrical requirements</li>
+        </ul>
+        <div class="cta-row">
+          <a class="btn btn-primary"
+             href="https://www.amazon.ca/Senville-SENA-12HF-Conditioner-Ductless-Energy/dp/B00ESNCW38?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=bc2ab89feaeea868b6877a97ef0fb5f6&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">Check Senville price</a>
+        </div>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3>Heating + cooling alternative: COSTWAY 12,000 BTU mini-split</h3>
+        <p class="small">
+          <a href="https://www.amazon.ca/COSTWAY-Conditioner-Inverter-208-230V-12000BTU/dp/B0CC2MVD7G?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=7dbe9e0490ed97e3f4cb4d41e5685e7b&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
+        </p>
+        <ul class="specs">
+          <li><strong>Best for:</strong> budget-focused builds with a clear electrical plan</li>
+          <li><strong>Watch-outs:</strong> voltage (often 208–230V), install quality, cold weather expectations</li>
+        </ul>
+        <div class="cta-row">
+          <a class="btn btn-primary"
+             href="https://www.amazon.ca/COSTWAY-Conditioner-Inverter-208-230V-12000BTU/dp/B0CC2MVD7G?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=7dbe9e0490ed97e3f4cb4d41e5685e7b&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">Check COSTWAY price</a>
+        </div>
+      </div>
+
+      <!-- NEW: EcoFlow solar panel (direct product URL) -->
+      <div class="card grid-span-6">
+        <h3>Solar (portable): EcoFlow Adjustable / Waterproof Solar Panel</h3>
+        <p class="small">
+          <a href="https://www.amazon.ca/dp/B09YV6P8VN?linkCode=ll2&tag=kitchengearla-20&linkId=729e99de6318af96e26ef74e50c30607&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">View on Amazon Canada</a>
+        </p>
+        <ul class="specs">
+          <li><strong>Best for:</strong> recharging a power station, daytime loads, off-grid “starter” setup</li>
+          <li><strong>Watch-outs:</strong> shade kills output, mounting angle, winter snow coverage, cable runs</li>
+        </ul>
+        <div class="cta-row">
+          <a class="btn btn-primary"
+             href="https://www.amazon.ca/dp/B09YV6P8VN?linkCode=ll2&tag=kitchengearla-20&linkId=729e99de6318af96e26ef74e50c30607&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">Check EcoFlow solar panel</a>
+        </div>
+      </div>
+
+      <!-- UPDATED EcoFlow block -->
+      <div class="card grid-span-12">
+        <h3>Premium off-grid / serious backup: EcoFlow DELTA Pro (high-capacity)</h3>
+        <p class="small">
+          <a href="https://www.amazon.ca/EF-ECOFLOW-3600-4500W-Expandable-Generator/dp/B0BW8PT9TD?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=ab7f5565174d8282d2c5a97099d144df&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">View EcoFlow DELTA Pro on Amazon Canada</a>
+        </p>
+
+        <ul class="specs">
+          <li><strong>Best for:</strong> backup power, temporary off-grid, tools + basic household loads (fridge, lights, small appliances)</li>
+          <li><strong>Watch-outs:</strong> not a full winter electric-heating plan, weight/portability, recharge strategy, cold-weather performance</li>
+        </ul>
+
+        <div class="cta-row">
+          <a class="btn btn-primary"
+             href="https://www.amazon.ca/EF-ECOFLOW-3600-4500W-Expandable-Generator/dp/B0BW8PT9TD?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=ab7f5565174d8282d2c5a97099d144df&ref_=as_li_ss_tl"
+             rel="nofollow sponsored noopener" target="_blank">Check EcoFlow DELTA Pro price</a>
+        </div>
+
+        <p class="small mb0">
+          Practical note: Great for bridging the gap while you wait for grid service, but for Canadian winters the biggest wins are still
+          insulation/air sealing and correctly sized HVAC.
+        </p>
+      </div>
+    </div>
+
+    <div class="noteBox noteBox--mt14">
+      <p class="small noteBoxText">
+        <strong>Realistic note:</strong> For Canadian winters, comfort is mostly about the envelope (insulation + air sealing) and correct HVAC sizing.
+        If insulation/windows are unknown, budget for upgrades or expect higher energy use.
+      </p>
+    </div>
+  </div>
+</section>
 
     <!-- FAQ -->
     <section id="faq" class="section anchor">
